SOE-1474: Fixed rounded corners on mobile

--- a/css/soe_helper.css
+++ b/css/soe_helper.css
@@ -708,8 +708,9 @@ body {
     width: 110px;
 }
 #mc_embed_signup_scroll input.button {
-    width: 75px;
-}    
+  width: 75px;
+  -webkit-border-radius: 0;
+}
 #mc_embed_signup_scroll input, 
 #mc_embed_signup_scroll button, 
 #mc_embed_signup_scroll select, 
